add cache redis sur le rag